--- a/index.html
+++ b/index.html
@@ -2,34 +2,42 @@
 <html lang="ko">
 <head>
   <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1, user-scalable=no"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover"/>
   <title>Hold’em&SHOT (.io)</title>
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#0b0e14"/>
   <style>
-    :root { --banner-h: 90px; }
-    @media (max-width: 768px){ :root { --banner-h: 50px; } }
-    html,body{margin:0;height:100%;background:#0b0e14;color:#e6e6e6;font-family:system-ui, -apple-system, Segoe UI, Roboto, Noto Sans KR, sans-serif;}
-    #banner { height: var(--banner-h); display:flex; align-items:center; justify-content:center; background:#0b0e14; border-bottom:1px solid #222; position:sticky; top:0; z-index:2;}
-    #wrap { position:relative; height: calc(100dvh - var(--banner-h)); }
-    #ui { position:absolute; inset:auto 0 0 0; display:flex; gap:8px; padding:10px; justify-content:center; z-index:1; pointer-events:none;}
-    .btn { pointer-events:auto; background:#1b1f2a; border:1px solid #2a2f3a; color:#fff; padding:10px 14px; border-radius:12px; cursor:pointer; }
-    .btn:disabled { opacity:.4; cursor:not-allowed; }
-    #topbar { position:absolute; top:8px; left:50%; transform:translateX(-50%); display:flex; gap:8px; z-index:1; }
-    .chip { background:#101420; border:1px solid #2a2f3a; border-radius:10px; padding:6px 10px; }
-    #roomPanel { position:absolute; right:10px; top:8px; background:#101420; border:1px solid #2a2f3a; border-radius:12px; padding:10px; }
-    #log { position:absolute; left:10px; top:8px; width:280px; height:160px; overflow:auto; font-size:12px; padding:8px;
-           background:#101420; border:1px solid #2a2f3a; border-radius:10px; }
-    canvas { display:block; width:100%; height:100%; background:#0b0e14; touch-action: manipulation; }
-    #install { position:absolute; left:10px; bottom:10px; }
+    :root { --banner-h: 64px; }
+    @media (min-width: 768px){ :root { --banner-h: 90px; } }
+    html,body{margin:0;height:100%;background:#0b0e14;color:#e6e6e6;font-family:system-ui,-apple-system,'Segoe UI',Roboto,'Noto Sans KR',sans-serif;}
+    body{padding-top: env(safe-area-inset-top); padding-bottom: env(safe-area-inset-bottom);}
+    #banner{height:var(--banner-h);display:flex;align-items:center;justify-content:center;background:#0b0e14;border-bottom:1px solid #222;position:sticky;top:0;z-index:3;}
+    #wrap{position:relative;height:calc(100dvh - var(--banner-h) - env(safe-area-inset-top));}
+    canvas{display:block;width:100%;height:100%;background:#0b0e14;touch-action:manipulation}
+    #topbar{position:absolute;top:8px;left:50%;transform:translateX(-50%);display:flex;gap:8px;z-index:2;flex-wrap:wrap;justify-content:center}
+    .chip{background:#101420;border:1px solid #2a2f3a;border-radius:10px;padding:6px 10px;font-size:12px}
+    #log{position:absolute;left:8px;top:8px;width:min(320px,40vw);max-height:30vh;overflow:auto;font-size:12px;padding:8px;background:#101420;border:1px solid #2a2f3a;border-radius:10px;z-index:2;display:none}
+    .btn{background:#1b1f2a;border:1px solid #2a2f3a;color:#fff;padding:12px 16px;border-radius:12px;cursor:pointer;font-size:14px}
+    .btn:disabled{opacity:.4;cursor:not-allowed}
+    #uiBottom{position:absolute;inset:auto 0 0 0;display:flex;gap:8px;padding:10px;justify-content:center;z-index:2;pointer-events:none;flex-wrap:wrap}
+    #uiBottom .btn{pointer-events:auto}
+    /* 오버레이 */
+    .overlay{position:absolute;inset:0;display:flex;align-items:center;justify-content:center;background:rgba(5,8,14,.75);z-index:4}
+    .panel{width:min(680px,92vw);background:#0f1522;border:1px solid #2a2f3a;border-radius:16px;padding:16px;box-shadow:0 10px 30px rgba(0,0,0,.4)}
+    .row{display:flex;gap:8px;flex-wrap:wrap}
+    .col{flex:1 1 200px}
+    input,select{width:100%;background:#0b0e14;color:#eee;border:1px solid #2a2f3a;border-radius:10px;padding:12px;font-size:16px}
+    h1,h2{margin:.3em 0}
+    .center{display:flex;gap:8px;justify-content:center;flex-wrap:wrap}
+    .label{font-size:12px;opacity:.8;margin-bottom:6px}
+    .hero{font-size:18px}
+    .danger{background:#5a1f1f;border-color:#7a2b2b}
+    .ok{background:#1f5a2b;border-color:#2b7a3a}
+    .muted{opacity:.8}
   </style>
 </head>
 <body>
-  <div id="banner">
-    <div style="width:728px; height:90px; display:flex; align-items:center; justify-content:center;">
-      <span style="opacity:.6">[Banner Ad Slot]</span>
-    </div>
-  </div>
+  <div id="banner"><div style="width:728px;max-width:92vw;height:100%;display:flex;align-items:center;justify-content:center"><span class="muted">[Banner Ad Slot]</span></div></div>
 
   <div id="wrap">
     <canvas id="game"></canvas>
@@ -37,56 +45,62 @@
     <div id="topbar">
       <div class="chip" id="phase">WAITING</div>
       <div class="chip" id="turn">-</div>
-      <div class="chip" id="timer">—</div>
-    </div>
-
-    <div id="roomPanel">
-      <div style="display:flex; gap:6px; margin-bottom:6px;">
-        <button class="btn" id="btnQuick">빠른 매칭</button>
-        <button class="btn" id="btnCreate">방 코드 생성</button>
-      </div>
-      <div style="display:flex; gap:6px;">
-        <input id="roomCode" placeholder="코드 입력" inputmode="latin" style="width:120px; background:#0b0e14; color:#eee; border:1px solid #2a2f3a; border-radius:8px; padding:6px;">
-        <button class="btn" id="btnJoin">입장</button>
-      </div>
-      <div style="margin-top:8px; font-size:12px; opacity:.7;">내 코드: <b id="myCode">-</b></div>
-      <div style="margin-top:8px; font-size:12px; opacity:.8;">WS: <span id="wsInfo">auto</span></div>
+      <div class="chip" id="ws">WS: auto</div>
     </div>
 
     <pre id="log"></pre>
 
-    <div id="ui">
+    <div id="uiBottom">
       <button class="btn" id="btnExchange" disabled>교환 완료</button>
       <button class="btn" id="btnNext" disabled>다음 진행</button>
+      <button class="btn danger" id="btnResign" disabled>포기하기</button>
     </div>
-    <button id="install" class="btn" hidden>앱 설치</button>
+
+    <!-- ▶ 입장/설정 오버레이 -->
+    <div class="overlay" id="ovrLobby">
+      <div class="panel">
+        <h1>Hold’em&SHOT (.io)</h1>
+        <p class="muted">이미지 스프라이트 없이 Canvas로 그린 1:1 포커 + 러시안룰렛</p>
+        <div class="row">
+          <div class="col">
+            <div class="label">플레이어 이름</div>
+            <input id="inpName" maxlength="12" placeholder="이름(최대 12자)" />
+          </div>
+          <div class="col">
+            <div class="label">러시안룰렛 총알 개수</div>
+            <select id="selBullets">
+              <option value="1">1발</option>
+              <option value="2">2발</option>
+              <option value="3">3발</option>
+            </select>
+          </div>
+        </div>
+        <div class="center" style="margin-top:12px">
+          <button class="btn" id="btnQuick">빠른 매칭(같은 총알 수끼리)</button>
+          <button class="btn" id="btnCreate">방 코드 생성</button>
+          <span style="align-self:center" class="muted">또는</span>
+          <input id="inpCode" placeholder="코드 입력" style="width:160px"/>
+          <button class="btn" id="btnJoin">코드 입장</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- ▶ 러시안룰렛/결과 오버레이 -->
+    <div class="overlay" id="ovrModal" style="display:none">
+      <div class="panel" id="modalContent"></div>
+    </div>
   </div>
 
-  <!-- 🔗 여기 한 줄: Render 서버 WebSocket 고정 -->
-  <script>
-    window.WS_URL = "wss://holdemnshot.onrender.com/ws";
-  </script>
+  <!-- WS 엔드포인트(필요시 변경) -->
+  <script>window.WS_URL = "wss://holdemnshot.onrender.com/ws";</script>
 
-  <!-- PWA 설치 & SW 등록 -->
+  <!-- SW 등록 & 설치 버튼 등 -->
   <script>
     if ('serviceWorker' in navigator) { navigator.serviceWorker.register('sw.js'); }
-    let deferredPrompt;
-    const installBtn = document.getElementById('install');
-    window.addEventListener('beforeinstallprompt', (e)=>{
-      e.preventDefault(); deferredPrompt = e; installBtn.hidden = false;
-    });
-    installBtn.addEventListener('click', async ()=>{
-      if (!deferredPrompt) return;
-      deferredPrompt.prompt();
-      await deferredPrompt.userChoice;
-      deferredPrompt = null;
-      installBtn.hidden = true;
-    });
-    // iOS 입력 확대 방지
-    document.addEventListener('gesturestart', (e)=>e.preventDefault());
+    // iOS 줌 방지
+    document.addEventListener('gesturestart', e=>e.preventDefault());
   </script>
 
-  <!-- 게임 클라이언트 -->
   <script type="module" src="client.js"></script>
 </body>
 </html>
