--- a/index.html
+++ b/index.html
@@ -7,45 +7,27 @@
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#0b0e14"/>
   <style>
-    :root { --banner-h: 64px; }
-    @media (min-width: 768px){ :root { --banner-h: 90px; } }
-    html,body{margin:0;height:100%;background:#0b0e14;color:#e6e6e6;font-family:system-ui,-apple-system,'Segoe UI',Roboto,'Noto Sans',sans-serif;}
-    body{padding-top: env(safe-area-inset-top); padding-bottom: env(safe-area-inset-bottom);}
-    #banner{height:var(--banner-h);display:flex;align-items:center;justify-content:center;background:#0b0e14;border-bottom:1px solid #222;position:sticky;top:0;z-index:3;}
-    #wrap{position:relative;height:calc(100dvh - var(--banner-h) - env(safe-area-inset-top));}
-    canvas{display:block;width:100%;height:100%;background:#0b0e14;touch-action:manipulation}
-    /* top chips */
-    #topbar{position:absolute;top:8px;left:50%;transform:translateX(-50%);display:flex;gap:8px;z-index:2;flex-wrap:wrap;justify-content:center}
+    html,body{margin:0;height:100%;background:#0b0e14;color:#e6e6e6;font-family:system-ui,-apple-system,Segoe UI,Roboto,Noto Sans,sans-serif;}
+    #banner{height:64px;display:flex;align-items:center;justify-content:center;background:#0b0e14;border-bottom:1px solid #222}
+    #wrap{position:relative;height:calc(100dvh - 64px)}
+    canvas{display:block;width:100%;height:100%;background:#0b0e14}
+    #topbar{position:absolute;top:8px;left:50%;transform:translateX(-50%);display:flex;gap:8px;z-index:2}
     .chip{background:#101420;border:1px solid #2a2f3a;border-radius:10px;padding:6px 10px;font-size:12px}
-    /* bottom buttons */
-    #uiBottom{position:absolute;inset:auto 0 0 0;display:flex;gap:8px;padding:10px;justify-content:center;z-index:2;pointer-events:none;flex-wrap:wrap}
-    #uiBottom .btn{pointer-events:auto}
-    .btn{background:#1b1f2a;border:1px solid #2a2f3a;color:#fff;padding:12px 16px;border-radius:12px;cursor:pointer;font-size:14px}
-    .btn:disabled{opacity:.4;cursor:not-allowed}
-    .danger{background:#5a1f1f;border-color:#7a2b2b}
-    /* overlays */
-    .overlay{position:absolute;inset:0;display:flex;align-items:center;justify-content:center;background:rgba(5,8,14,.75);z-index:4}
-    .panel{width:min(720px,92vw);background:#0f1522;border:1px solid #2a2f3a;border-radius:16px;padding:20px;box-shadow:0 10px 30px rgba(0,0,0,.4)}
-    .row{display:flex;gap:10px;flex-wrap:wrap}
-    .col{flex:1 1 240px}
-    input,select{width:100%;background:#0b0e14;color:#eee;border:1px solid #2a2f3a;border-radius:12px;padding:12px;font-size:16px}
-    h1{margin:.2em 0;font-weight:800;letter-spacing:.5px}
-    .subtitle{opacity:.85;margin:.6em 0 1em}
-    .center{display:flex;gap:8px;justify-content:center;flex-wrap:wrap}
-    .muted{opacity:.8}
-    /* home hero like slither */
-    .logo{font-size:48px;font-weight:900;letter-spacing:.5px;background:linear-gradient(90deg,#8a7cff,#2dd4bf);-webkit-background-clip:text;background-clip:text;color:transparent;text-shadow:0 4px 20px rgba(45,212,191,.15)}
-    .pill{border-radius:24px;padding:12px 18px;background:#171c2b;border:1px solid #2a2f3a}
-    /* spinner */
-    .spinner{width:56px;height:56px;border-radius:50%;border:6px solid rgba(255,255,255,.15);border-top-color:#8a7cff;animation:spin 0.9s linear infinite;margin:16px auto}
+    #uiBottom{position:absolute;bottom:10px;left:0;right:0;display:flex;gap:8px;justify-content:center;z-index:2}
+    .btn{background:#1b1f2a;border:1px solid #2a2f3a;color:#fff;padding:10px 14px;border-radius:12px;cursor:pointer}
+    .btn:disabled{opacity:.5;cursor:not-allowed}
+    .overlay{position:absolute;inset:0;display:flex;align-items:center;justify-content:center;background:rgba(0,0,0,.7);z-index:5}
+    .panel{background:#0f1522;padding:20px;border-radius:12px;border:1px solid #2a2f3a;max-width:400px;width:90%}
+    .logo{font-size:32px;font-weight:800;margin-bottom:12px;text-align:center}
+    .row{margin:8px 0;display:flex;gap:6px}
+    input,select{flex:1;padding:10px;border-radius:8px;border:1px solid #2a2f3a;background:#0b0e14;color:#fff}
+    .spinner{width:40px;height:40px;border:4px solid rgba(255,255,255,.2);border-top-color:#8a7cff;border-radius:50%;animation:spin 1s linear infinite;margin:20px auto}
     @keyframes spin{to{transform:rotate(360deg)}}
   </style>
 </head>
 <body>
   <div id="banner">
-    <div style="width:728px;max-width:92vw;height:100%;display:flex;align-items:center;justify-content:center">
-      <span class="muted">[Banner Ad Slot]</span>
-    </div>
+    <span>[Banner Ad Slot]</span>
   </div>
 
   <div id="wrap">
@@ -54,76 +36,52 @@
     <div id="topbar">
       <div class="chip" id="phase">WAITING</div>
       <div class="chip" id="turn">-</div>
-      <div class="chip" id="ws">WS: auto</div>
+      <div class="chip" id="ws">WS:auto</div>
     </div>
 
     <div id="uiBottom">
-      <button class="btn" id="btnReady" disabled>Ready</button>
-      <button class="btn" id="btnNext"  disabled>Next</button>
-      <button class="btn danger" id="btnResign" disabled>Resign</button>
+      <button id="btnReady" class="btn" disabled>Ready</button>
+      <button id="btnNext"  class="btn" disabled>Next</button>
+      <button id="btnResign"class="btn" disabled>Resign</button>
     </div>
 
-    <!-- Home / Lobby -->
-    <div class="overlay" id="ovrHome">
-      <div class="panel" style="text-align:center">
+    <!-- 홈 화면 -->
+    <div id="ovrHome" class="overlay">
+      <div class="panel">
         <div class="logo">Hold’em & SHOT</div>
-        <div class="subtitle">1v1 Hold’em + Russian Roulette</div>
-
-        <div class="row" style="margin:10px 0 6px">
-          <div class="col">
-            <input id="inpName" maxlength="12" placeholder="Nickname (max 12)"/>
-          </div>
-          <div class="col">
-            <select id="selBullets" title="Bullets">
-              <option value="1">Bullets: 1</option>
-              <option value="2">Bullets: 2</option>
-              <option value="3">Bullets: 3</option>
-            </select>
-          </div>
-        </div>
-
-        <div class="center" style="margin-top:10px">
-          <button class="btn pill" id="btnPlay">Play (Quick Match)</button>
-        </div>
-
-        <div class="center muted" style="margin:12px 0 6px">or</div>
-
+        <div class="row"><input id="inpName" placeholder="Nickname" maxlength="12"></div>
         <div class="row">
-          <div class="col">
-            <button class="btn" id="btnCreate">Create Room</button>
-          </div>
-          <div class="col" style="display:flex;gap:8px">
-            <input id="inpCode" placeholder="Room code" style="flex:1"/>
-            <button class="btn" id="btnJoin">Join</button>
-          </div>
+          <select id="selBullets">
+            <option value="1">Bullets: 1</option>
+            <option value="2">Bullets: 2</option>
+            <option value="3">Bullets: 3</option>
+          </select>
+        </div>
+        <div class="row"><button id="btnPlay" class="btn">Play (Quick Match)</button></div>
+        <div class="row"><button id="btnCreate" class="btn">Create Room</button></div>
+        <div class="row">
+          <input id="inpCode" placeholder="Room code">
+          <button id="btnJoin" class="btn">Join</button>
         </div>
       </div>
     </div>
 
-    <!-- Connecting -->
-    <div class="overlay" id="ovrConnecting" style="display:none">
+    <!-- 커넥팅 화면 -->
+    <div id="ovrConnecting" class="overlay" style="display:none">
       <div class="panel" style="text-align:center">
-        <h1>Connecting…</h1>
+        <h3>Connecting…</h3>
         <div class="spinner"></div>
-        <div class="muted" id="connDesc">Searching players…</div>
+        <div id="connDesc">Searching players…</div>
       </div>
     </div>
 
-    <!-- Modal (Showdown / Roulette / End) -->
-    <div class="overlay" id="ovrModal" style="display:none">
+    <!-- 모달 -->
+    <div id="ovrModal" class="overlay" style="display:none">
       <div class="panel" id="modalContent"></div>
     </div>
   </div>
 
-  <!-- WebSocket endpoint (change if needed) -->
-  <script>window.WS_URL = "wss://holdemnshot.onrender.com/ws";</script>
-
-  <!-- SW & mobile quirks -->
-  <script>
-    if ('serviceWorker' in navigator) { navigator.serviceWorker.register('sw.js'); }
-    document.addEventListener('gesturestart', e=>e.preventDefault()); // iOS zoom
-  </script>
-
-  <script type="module" src="client.js"></script>
+  <script>window.WS_URL="wss://holdemnshot.onrender.com/ws";</script>
+  <script src="client.js"></script>
 </body>
 </html>
