--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
     <div class="title">🂡 Hold'em<span style="opacity:.6">&</span>SHOT <span class="badge">PWA</span></div>
     <div class="subtitle">1v1 Texas Hold'em + 러시안룰렛 (조커 효과 포함) — Quick Match 8초 대기 후 AI 매칭</div>
 
+    <div class="row" style="align-items:center; margin:4px 0 10px 0;">
+      <div id="connIndicator" style="width:14px;height:14px;border-radius:50%;background:#ff3b30;margin-right:6px;border:1px solid #1e242c;"></div>
+      <span style="font-size:14px;color:var(--muted)">Server</span>
+    </div>
+    
+
     <div class="stack">
       <div class="row">
         <div>
@@ -97,6 +103,12 @@
   <div class="card hidden" id="panel-room">
     <div class="title">🗝️ Private Room</div>
     <div class="subtitle">코드를 공유하면 친구가 입장할 수 있어요.</div>
+
+    <div class="row" style="align-items:center; margin:4px 0 10px 0;">
+      <div id="connIndicator" style="width:14px;height:14px;border-radius:50%;background:#ff3b30;margin-right:6px;border:1px solid #1e242c;"></div>
+      <span style="font-size:14px;color:var(--muted)">Server</span>
+    </div>
+    
     <div class="readyBar">
       <div>Room Code: <b id="roomCode"></b></div>
       <div class="btn" id="btn-leave-room">Leave</div>
